@@ -2,6 +2,7 @@
 
   * FIXED:
     * the sunlive time was wrongly computed, it has been fixed.
+    * the day or night icon wasn't set properly based on sunrise and sunset.
 
   * MODIFIED:
     * set_size function has been improved.
